Modify Forget password with SendGrid Email API

--- a/Templates/ResetPasswordEmail.html
+++ b/Templates/ResetPasswordEmail.html
@@ -58,7 +58,7 @@
     </div>
     <div class="content">
       <p>Hi there,</p>
-      <p>You recently requested to reset your password. Click the button below to choose a new one:</p>
+      <p>You have requested to reset your password for {USER_EMAIL}. Click the button below to reset your password:</p>
       <p style="text-align:center;">
         <a href="{RESET_LINK}" class="button">Reset Password</a>
       </p>
